# McRhythm

./: .gitignore  CLAUDE.md  Cargo.toml  DATABASE_REQUIREMENTS_SUMMARY.md  DEBT_ANALYSIS_INDEX.md  PCH001_project_charter.md  PLAN026_SUMMARY.md  PLAN026_implementation_summary.md  PLAN027_PROGRESS.md  PLAN027_SPRINT1_COMPLETE.md  README.md  SPECIFICATION_SEARCH_INDEX.md  SPRINT1_CHANGELOG.md  SPRINT2_CHANGELOG.md  TECHNICAL_DEBT_ANALYSIS.md  TECHNICAL_DEBT_REPORT.md  agent_design.txt  api_design.md  architecture.md  audio_file_segmentation.md  coding_conventions.md  crossfade.md  crossfade_diagrams.md  database_schema.md  deployment.md  discussion.txt  document_hierarchy.md  entity_definitions.md  event_system.md  failing_tests_analysis.md  gstreamer_design.md  implementation_order.md  library_management.md  like_dislike.md  lock_reduction_verification.md  multi_user_coordination.md  musical_flavor.md  musical_taste.md  program_director.md  project_structure.md  (+10 more)
wkmp-ai/: BOUNDARY_DETECTION_BLOCKING_FIX.md  CURRENT_WORKFLOW_STATES.md  Cargo.toml  EXTRACTION_PHASE_ARCHITECTURE_COMPARISON.md  EXTRACTION_PHASE_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_IMPLEMENTATION.md  PARALLELISM_CORRECTION.md  PARALLEL_PROCESSING_IMPLEMENTATION.md  PHASE_PROGRESS_UI_FIX.md  PIPELINE_PROGRESS_SMOOTHNESS_FIX.md  PRE_IMPORT_ACOUSTID_VALIDATION.md  PROGRESS_DISPLAY_FIXES.md  TEST_COVERAGE_ACOUSTID_VALIDATION.md  TEST_COVERAGE_UPDATE.md  WORKFLOW_ENGINE_USAGE.md  WORKFLOW_PROGRESS_IMPLEMENTATION.md  build.rs  wkmp.db
wkmp-ai/migrations/: 001_plan023_import_provenance.sql
wkmp-ai/src/: config.rs  error.rs  event_bridge.rs  lib.rs  main.rs  types.rs
wkmp-ai/src/api/: amplitude_analysis.rs  health.rs  import_workflow.rs  mod.rs  parameters.rs  settings.rs  sse.rs  ui.rs  ui.rs.backup
wkmp-ai/src/db/: albums.rs  artists.rs  files.rs  mod.rs  parameters.rs  passages.rs  schema.rs  sessions.rs  settings.rs  songs.rs  works.rs
wkmp-ai/src/extractors/: acoustid_client.rs  audio_derived_extractor.rs  chromaprint_analyzer.rs  essentia_analyzer.rs  id3_extractor.rs  id3_genre_mapper.rs  mod.rs  musicbrainz_client.rs
wkmp-ai/src/ffi/: chromaprint.rs  mod.rs
wkmp-ai/src/fusion/: flavor_synthesizer.rs  identity_resolver.rs  metadata_fuser.rs  mod.rs
wkmp-ai/src/import_v2/: db_repository.rs  mod.rs  session_orchestrator.rs  song_workflow_engine.rs  sse_broadcaster.rs  types.rs
wkmp-ai/src/models/: amplitude_profile.rs  bootstrap_config.rs  import_result.rs  import_session.rs  mod.rs  parameters.rs
wkmp-ai/src/services/: acousticbrainz_client.rs  acoustid_client.rs  amplitude_analyzer.rs  api_key_validator.rs  confidence_assessor.rs  contextual_matcher.rs  essentia_client.rs  file_scanner.rs  file_tracker.rs  filename_matcher.rs  fingerprinter.rs  folder_selector.rs  mod.rs  (+14 more)
wkmp-ai/static/: import-progress.js  settings.css  settings.html  settings.js  wkmp-sse.js
wkmp-ai/tests/: api_integration_tests.rs  architecture_compliance_tests.rs  bootstrap_config_tests.rs  component_tests.rs  concurrent_tests.rs  config_tests.rs  database_schema_validation.rs  db_settings_tests.rs  generate_test_fixtures.rs  http_server_tests.rs  integration_audio_tests.rs  integration_db_provenance.rs  integration_multi_source.rs  integration_workflow.rs  orchestrator_integration.rs  recovery_tests.rs  regression_foreign_key_fix.rs  settings_api_tests.rs  system_tests.rs  test_file_scanner_parallel.rs  test_parallel_fingerprinting.rs  workflow_integration.rs  workflow_tests.rs
wkmp-ap/: API_QUICKSTART.md  API_REFERENCE.md  ARCHITECTURAL_REVIEW-event_driven_implementation.md  AUDIBLE_TEST_ENHANCEMENTS.md  AUDIO_FORMAT_TEST_PLAN.md  AUTHENTICATION_STATUS.md  CROSSFADE_TEST_README.md  Cargo.toml  DIAGNOSTIC_RESULTS.md  OVERALL_IMPLEMENTATION_REVIEW.md  PLAN016_implementation_report.md  README.md  RESTFUL_ANALYSIS.md  STARTUP_DIAGNOSTICS.md  STARTUP_OPTIMIZATION_IMPLEMENTATION.md  STARTUP_PERFORMANCE_ANALYSIS.md  TEST_COVERAGE_ASSESSMENT.md  TUNE_BUFFERS_BUG_FIX.md  TUNE_BUFFERS_GUIDE.md  TUNE_BUFFERS_IMPROVEMENTS.md  VOLUME_CONTROL_ANALYSIS.md  VOLUME_TEST_COVERAGE.md  WIRING_PLAN.md  baseline_metrics.txt  build.rs  code_mapping.md  engine_tests.txt  openapi.yaml  original_line_count.txt  postman-collection.json  test_baseline.txt
wkmp-ap/.claude/: settings.local.json
wkmp-ap/benches/: buffer_bench.rs  crossfade_bench.rs  decode_bench.rs  fade_bench.rs  mixer_bench.rs  resample_bench.rs  startup_bench.rs  tick_bench.rs
wkmp-ap/src/: config.rs  config_new.rs  error.rs  events.rs  events.rs.backup  lib.rs  main.rs  server.rs  state.rs
wkmp-ap/src_old/: state.rs
wkmp-ap/tests/: AUDIBLE_TEST_README.md  CROSSFADE_COMPLETION_TEST_REPORT.md  CROSSFADE_INTEGRATION_README.md  README_chain_tests.md  api_integration.rs  audible_crossfade_test.rs  audio_format_tests.rs  audio_subsystem_test.rs  auth_post_integration.rs  buffer_chain_monitoring_tests.rs  buffer_config_tests.rs  buffer_management_tests.rs  buffer_tests.rs  chain_assignment_tests.rs  chain_persistence_tests.rs  comprehensive_playback_test.rs  crossfade_completion_tests.rs  crossfade_completion_unit_tests.rs  crossfade_integration_tests.rs  crossfade_test.rs  crossfade_tests.rs  decoder_pool_tests.rs  error_handling_integration_tests.rs  error_handling_unit_tests.rs  event_driven_playback_tests.rs  integration_basic_playback.rs  mixer_integration.rs  mixer_integration_tests.rs  playback_engine_integration.rs  queue_integrity_tests.rs  real_audio_playback_test.rs  serial_decoder_tests.rs  startup_performance_test.rs  test_engine.rs
wkmp-common/: Cargo.toml  MIGRATIONS.md
wkmp-common/src/: config.rs  error.rs  events.rs  fade_curves.rs  human_time.rs  lib.rs  params.rs  sse.rs  time.rs  timing.rs  timing_tests.rs  uuid_utils.rs
wkmp-common/static/: wkmp-ui.css
wkmp-common/tests/: config_tests.rs  db_init_tests.rs  toml_utils_tests.rs
wkmp-dr/: Cargo.toml  EXTENSIBILITY.md  README.md  build.rs
wkmp-dr/src/: lib.rs  main.rs  pagination.rs
wkmp-dr/tests/: api_tests.rs  security_tests.rs
wkmp-ui/: Cargo.toml
wkmp-ui/src/: main.rs
(+1109 files in other folders)
