[workspace]
resolver = "2"

members = [
    "wkmp-common",
    "wkmp-ap",
    "wkmp-ui",
    "wkmp-le",
    "wkmp-pd",
    "wkmp-ai",
]

# Shared dependencies across workspace
[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"

# Version differentiation is achieved by packaging different binaries
# No feature flags or conditional compilation required
[workspace.metadata.versions]
# Full version: Package all 5 binaries (wkmp-ap, wkmp-ui, wkmp-le, wkmp-pd, wkmp-ai)
# Lite version: Package 3 binaries (wkmp-ap, wkmp-ui, wkmp-pd)
# Minimal version: Package 2 binaries (wkmp-ap, wkmp-ui)
