[package]
name = "wkmp-ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "wkmp_ai"
path = "src/lib.rs"

[[bin]]
name = "wkmp-ai"
path = "src/main.rs"

[dependencies]
wkmp-common = { path = "../wkmp-common" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
toml = { workspace = true }
walkdir = "2.4"
infer = "0.16"
reqwest = { version = "0.11", features = ["json"] }
governor = "0.6"
lofty = "0.19"
async-stream = "0.3"
futures = "0.3"
# Audio fingerprinting (Decision 3: static linking)
chromaprint-sys-next = "1.6"
base64 = "0.22"
# File hashing for deduplication
sha2 = "0.10"
# Audio decoding and resampling
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
# Static file serving
tower-http = { version = "0.6", features = ["fs"] }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
tempfile = "3.8"
serial_test = "3.0"
