[package]
name = "wkmp-ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "wkmp_ai"
path = "src/lib.rs"

[[bin]]
name = "wkmp-ai"
path = "src/main.rs"

[dependencies]
wkmp-common = { path = "../wkmp-common" }
tokio = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
toml = { workspace = true }
walkdir = "2.4"
infer = "0.16"
reqwest = { version = "0.11", features = ["json"] }
governor = "0.7"  # Updated for API rate limiting (HIGH-004)
lofty = "0.19"
id3 = "1.14"  # REQ-TD-004: MBID extraction from MP3 UFID frames
async-stream = "0.3"
futures = "0.3"
# Audio fingerprinting - PLAN023 resolution
chromaprint-rust = "0.1.3"  # HIGH-001: Safe wrapper for chromaprint
chromaprint-sys-next = { version = "1.6" }  # System dependency for chromaprint-rust
base64 = "0.22"
# String similarity for validation - CRITICAL-003
strsim = "0.11"
# Musical flavor extraction - HIGH-002
# TODO: Add essentia = "0.1.5" when ready to implement Essentia support
# essentia = "0.1.5"
# essentia-core = "0.1.5"
# File hashing for deduplication
sha2 = "0.10"
# Audio decoding and resampling
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
# Static file serving
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
tempfile = "3.8"
serial_test = "3.0"
hound = "3.5"  # WAV file creation for integration tests

# Windows-specific: Enable static linking for chromaprint to avoid DLL dependencies
[target.'cfg(windows)'.dependencies]
chromaprint-sys-next = { version = "1.6", features = ["static"] }
