[package]
name = "wkmp-ap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wkmp-ap"
path = "src/main.rs"

[dependencies]
wkmp-common = { path = "../wkmp-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# SSE support
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Audio processing
symphonia = { version = "0.5", features = ["mp3", "flac", "aac", "isomp4", "vorbis"] }
rubato = "0.15"
cpal = "0.15"

[dev-dependencies]
# Additional dependencies for testing
http = "1.0"
http-body-util = "0.1"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crossfade_bench"
harness = false
