[package]
name = "wkmp-ap"
version = "0.1.0"
edition = "2021"
default-run = "wkmp-ap"

[lib]
name = "wkmp_ap"
path = "src/lib.rs"

[[bin]]
name = "wkmp-ap"
path = "src/main.rs"

[[bin]]
name = "tune-buffers"
path = "src/bin/tune_buffers.rs"

[dependencies]
wkmp-common = { path = "../wkmp-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# SSE support
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Audio processing
# Note: Opus support via symphonia-adapter-libopus [REQ-TECH-022A]
# Requires libopus system library (see IMPL006-opus_integration.md)
symphonia = { version = "0.5", features = ["mp3", "flac", "aac", "isomp4", "vorbis"] }
symphonia-adapter-libopus = "0.2.3"
rubato = "0.15"
cpal = "0.15"
ringbuf = "0.4"

[build-dependencies]
# For build.rs to capture build timestamp
chrono = { workspace = true }

[dev-dependencies]
# Additional dependencies for testing
http = "1.0"
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"] }
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
# File searching for tests
walkdir = "2.4"
# Audio test file generation (for pipeline integrity tests)
hound = "3.5"
tempfile = "3.8"
# Test serialization for shared resource access
serial_test = "3.2"

# Performance Benchmarks
# See docs/validation/IMPL-TESTS-003-performance-benchmarks.md

[[bench]]
name = "crossfade_bench"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "decode_bench"
harness = false

[[bench]]
name = "resample_bench"
harness = false

[[bench]]
name = "fade_bench"
harness = false

[[bench]]
name = "buffer_bench"
harness = false

[[bench]]
name = "mixer_bench"
harness = false

[[bench]]
name = "tick_bench"
harness = false
