[package]
name = "wkmp-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = "5.0"
sha2 = "0.10"
rand = "0.8"
once_cell = "1.19"
# SSE utilities
axum = { workspace = true }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.23"
serial_test = "3.0"
